Fixed navbar-toggler on mobile devices

--- a/css/responsive-site.css
+++ b/css/responsive-site.css
@@ -18,17 +18,20 @@
     .main-class h3 {
         font-size: 20px;
     }
-
     .navbar-brand {
-        width: 60%;
+        width: 50%;
     }
 
         .navbar-brand p {
-            font-size: 15px;
+            font-size: 50%;
+        }
+        .navbar-toggler {
+            width: 15%;
         }
 
     .navbar-toggler-icon {
         width: 10%;
+        margin-left: 0;
     }
 
     .site-name p {
